--- a/profile.html
+++ b/profile.html
@@ -23,8 +23,8 @@
     <div class="jumbotron">
       <h1 class="display-4" style="color: #B84602"><img src="pic.png" width="120" height="120" alt="">&nbsp;</h1>
       <h1 class="display-4" style="color: #B84602">Personality Metrics</h1>
-      <p class="lead">In an effort to understand our individual role within the group collaboration assessments that will follow in the coming weeks and throughout the remainder of the course, we've been instructed to seek three online personality tests and submit our results in this assessment.</p>
-      <p class="lead">The first of these is the Myers-Briggs test that seems to inform me personally I'm not the 'type' of person configured&nbsp; particularly well&nbsp;&nbsp;</p>
+      <p class="lead">In an effort to understand our individual role within the group collaboration assessments that will follow in the coming weeks and throughout the remainder of the course, we've been instructed to seek three online personality tests and submit our results in this assessment, all of which can be found within the stacked accordion below.</p>
+      <p class="lead">The first of these is the Myers-Briggs test and it's reminding me of the fact I'm not  exactly the 'type' of person who's <i>itching</i> to dive into a group nor worry too much about the opinions of others which is something I already knew, though I also know that - as an outsider - my contributions come from a "step-back" or overhead view of the group as a whole and this perspective leaves me very well placed to perceive group dynamics since I am slgihtly removed instead of submerged in most groups..</p>
 <hr class="my-4">
 <div id="accordion1" role="tablist">
   <div class="card">
