--- a/profile.html
+++ b/profile.html
@@ -43,8 +43,8 @@
 		<div class="progress" style="background-color: #444444">
   <div class="progress-bar bg-danger" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">80% OBSERVANT</div>
 </div><br>
-<p>&nbsp;</p>
-</div>
+<p>Click <a href="https://www.16personalities.com/istp-personality">here</a> to view complete results for the <strong>ISTP-A</strong> personality type or click the logo below to visit 16personalities.com to take the test yourself..</p>
+<img src="16personalities-logo.png" style="align-self: center" href="https://www.16personalities.com/">    </div>
     </div>
   </div>
   <div class="card">
