--- a/profile.html
+++ b/profile.html
@@ -34,17 +34,20 @@
     </div>
     <div id="collapseOne1" class="collapse show" role="tabpanel" aria-labelledby="headingOne1" data-parent="#accordion1">
       <div class="card-body">
-        <p class="h4">&nbsp;ISTP-Assertive</p>
-        <p>ISTP personality types are&nbsp;</p>
+        <p class="h4">ISTP-Assertive</p>
+        <p>An individual mindset with a free-floating, socially disconnected way of operating makes the ISTP-A much less dependant or affected by the opinions of other people which in turn means more personal freedom to pursue their own goals, interests and ideas without any infuence from society in general.</p>
+        <p>Dominant personal attributes are labelled as <em><u>Introverted</u></em>, <em><u>Observant</u></em>, <em><u>Thinking</u></em> and <em><u>Prospecting</u></em> making them naturally curious and mentally agile with a flexibility in their approach that allows the ISTP-A personality to freely adapt to almost any situation they find themselves confronted with. </p>
 <div class="progress" style="background: #444444">
   <div class="progress-bar bg-danger" role="progressbar" style="width: 76%" aria-valuenow="76" aria-valuemin="0" aria-valuemax="100" style="background-color: #B84602">76% INTROVERTED</div>
         </div>
 		<p></p>
 		<div class="progress" style="background-color: #444444">
   <div class="progress-bar bg-danger" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">80% OBSERVANT</div>
-</div><br>
+</div>
+<p>Strengths of the ISTP-A are their extremely high level of mental energy, creativity and practicality, spontaeneous adaptation to problems, pragmatic/practical thinking, their ability to prioritize and the fact they're great in high-stress or crisis situations because of their down to earth and relaxed manner.</p>
+<p>Weaknesses include that we are stubborn, insensitive to other peoples needs, reserved and detached, <i>super</i> </i>easily bored, dislike investing in long-term effort and are compulsive..</p>		 
 <p>Click <a href="https://www.16personalities.com/istp-personality">here</a> to view complete results for the <strong>ISTP-A</strong> personality type or click the logo below to visit 16personalities.com to take the test yourself..</p>
-<img src="16personalities-logo.png" style="align-self: center" href="https://www.16personalities.com/">    </div>
+<a href="https://www.16personalities.com/" target="_blank"><img src="16personalities-logo.png" style="align: center"></a>    </div>
     </div>
   </div>
   <div class="card">
