--- a/profile.html
+++ b/profile.html
@@ -36,7 +36,7 @@
       <div class="card-body">
         <p class="h4">ISTP-Assertive</p>
         <p>An individual mindset with a free-floating, socially disconnected way of operating makes the ISTP-A much less dependant or affected by the opinions of other people which in turn means more personal freedom to pursue their own goals, interests and ideas without any infuence from society in general.</p>
-        <p>Dominant personal attributes are labelled as <em><u>Introverted</u></em>, <em><u>Observant</u></em>, <em><u>Thinking</u></em> and <em><u>Prospecting</u></em> making them naturally curious and mentally agile with a flexibility in their approach that allows the ISTP-A personality to freely adapt to almost any situation they find themselves confronted with and though these four major traits are front and center for any ISTP-A personality I've additionally included the precise percentages of my own test results below, which are..</p>
+        <p>Dominant personal attributes are labelled as <em><u>Introverted</u></em>, <em><u>Observant</u></em>, <em><u>Thinking</u></em> and <em><u>Prospecting</u></em> making them naturally curious and mentally agile with a flexibility in their approach that allows the ISTP-A personality to freely adapt to almost any situation they find themselves confronted with.</p><p>hough these four major traits are front and center for any ISTP-A personality I've additionally included the precise percentages of my own test results below, which are..</p>
         <div class="progress" style="background: #666">
           <div class="progress-bar bg-danger" role="progressbar" style="width: 76%" aria-valuenow="76" aria-valuemin="0" aria-valuemax="100" style="background-color: #B84602">76% INTROVERTED</div>
         </div>
