--- a/profile.html
+++ b/profile.html
@@ -47,7 +47,7 @@
 </div>
 		  
 <br />		  
-<p>Strengths of the ISTP-A are their extremely high level of mental energy, creativity and practicality, spontaeneous adaptation to problems, pragmatic/practical thinking, their ability to prioritize and the fact they're great in high-stress or crisis situations because of their down to earth and relaxed manner.</p>
+<p>Strengths of the ISTP-A are their extremely high level of mental energy, creativity and practicality, spontaeneous adaptation to problems, pragmatic/practical thinking, their ability to prioritize and the fact they're great in high-stress or crisis situations because they're too detached and uncaring to panic about ahh, <i>anything</i>.</p>
 <p>Weaknesses include that we are stubborn, insensitive to other peoples needs, reserved and detached, <i>super</i> </i>easily bored, dislike investing in long-term effort and are compulsive..</p>		 
 <p>Click <a href="https://www.16personalities.com/istp-personality" style="color: #00F3C9">here</a> to view complete results for the <strong>ISTP-A</strong> personality type or click the logo below to visit 16personalities.com to take the test yourself..</p>
 <a href="https://www.16personalities.com/" target="_blank"><img src="16personalities-logo.png" style="align: center"></a>    </div>
