--- a/why.html
+++ b/why.html
@@ -22,7 +22,7 @@
   <div class="container-fluid">
     <div class="jumbotron">
       <h1 class="display-4" style="color: #B84602"><img src="pic.png" width="120" height="120" alt="">&nbsp;&nbsp;</h1>
-      <h1 class="display-4" style="color: #B84602">Why IT?</h1>
+      <h1 class="display-4" style="color: #B84602">Why Information Technology?</h1>
 <p class="lead"> However you've found your way to myGithub Pages profile you are here now.</p>
       <p class="lead">Before you begin clicking around the different pages that comprise this assessment though, take a moment to read the short few paragraphs below as they summarize the content you will find as well as tell you a little about myself.&nbsp; &nbsp;&nbsp;</p>
 <p class="lead">&nbsp; </p>
