--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <div class="container-fluid">
     <div class="jumbotron">
       <h1 class="display-4" style="color: #B84602"><img src="pic.png" width="120" height="120" alt="">&nbsp;&nbsp;</h1>
-      <h1 class="display-4" style="color: #B84602">Welcome! Assessment 01 - My Profile</h1>
+      <h1 class="display-4" style="color: #B84602">Welcome to Assessment 01: "My Profile"</h1>
 <p class="lead"> This first assessment for Introduction to IT has us tasked with the job of creating our own individual presentation in the format of webpage hosted right here on GitHub - a project I've been very confortable with given I've been creating and messing around with sites for over twenty years now.</p>
       <p class="lead">Before we begin, let me take a few moments to introduce myself and write a paragraph or two about my own background as well as personal history and interests.</p>
       <p class="lead">&nbsp;</p>
