--- a/index.html
+++ b/index.html
@@ -33,8 +33,10 @@
       <p class="lead">&nbsp;</p>
     </div>
   </div>
-  <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light active"> <a class="navbar-brand" href="" style="color: #B84602">Welcome!</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1" aria-controls="navbarSupportedContent1" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
+	  
+  <div class="badge-dark" align="center">&copy; Copyright 2020 <a href="https://psychaesthetic.com.au" accesskey="P" target="new">Jason Barber</a> | <a href="mailto:jason@psychaesthetic.com.au" accesskey="M">Shoot me an email</a></div>
+<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light active"> <a class="navbar-brand" href="" style="color: #B84602">Welcome!</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1" aria-controls="navbarSupportedContent1" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent1">
       <ul class="navbar-nav mr-auto">
 		<li class="nav-item"> <a class="nav-link" href="profile.html">Personality Metrics</a> </li>
