--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
     </div>
   </div>
 	  
-  <div class="badge-dark" align="center" style="background-color: #6F6654">&copy; 2020 <a href="https://psychaesthetic.com.au" accesskey="P" target="new">Jason Barber</a> | <a href="mailto:jason@psychaesthetic.com.au" accesskey="M">Shoot me an email</a><br />
+  <div class="badge-dark" align="center" style="background-color: #6F6654; color: #BBB6AC; font-weight:350">&copy; 2020 Jason Barber | <a href="mailto:jason@psychaesthetic.com.au" accesskey="M">Toss me an email</a> or <a href="https://psychaesthetic.com.au" accesskey="P" target="new">visit my personal site</a><br />
+    &#8230;&nbsp;
   </div>
 <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light active"> <a class="navbar-brand" href="" style="color: #B84602">Welcome!</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1" aria-controls="navbarSupportedContent1" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
