--- a/projects.html
+++ b/projects.html
@@ -29,6 +29,9 @@
 <p class="lead">&nbsp; </p>
     </div>
   </div>
+ <!-- footer div -->	  
+ <div class="badge-dark" align="center" style="background-color: #5A5244; color: #9B9384; font-weight: 400">﴾ <img src="copy.png" alt="" width="10" height="13" align="absmiddle"/> <a id="ftMail" href="mailto:jason@psychaesthetic.com.au" accesskey="M" style="color: #C2C2C2" onclick="copyToClipboard('jason@psychaesthetic.com.au')">Toss me an email</a> or <a id="ftSite" href="https://psychaesthetic.com.au" accesskey="P" target="new"  style="color: #C2C2C2" onclick="copyToClipboard('https://psychaesthetic.com.au')">visit my personal site</a> <img src="copy.png" alt="" width="10" height="13" align="absmiddle"/> ﴿<br />
+ </div>
   <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light"> <a class="navbar-brand" href="index.html">Welcome!</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1" aria-controls="navbarSupportedContent1" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent1">
