--- a/profile.html
+++ b/profile.html
@@ -24,7 +24,7 @@
       <h1 class="display-4" style="color: #B84602"><img src="pic.png" width="120" height="120" alt="">&nbsp;</h1>
       <h1 class="display-4" style="color: #B84602">Personality Metrics: Myers-Briggs, Learning Style and other tests</h1>
       <p class="lead">In an effort to understand our individual role within the group collaboration assessments that will follow in the coming weeks and throughout the remainder of the course, we've been instructed to seek three online personality tests and submit our results in this assessment, all of which can be found within the stacked accordion below.</p>
-      <p class="lead">The first of these is the Myers-Briggs test and it's reminding me of the fact I'm not  exactly the 'type' of person who's <i>itching</i> to dive into a group nor worry too much about the opinions of others which is something I already knew, though I also know that - as an outsider - my contributions come from a "step-back" or overhead view of the group as a whole and this perspective leaves me very well placed to perceive group dynamics since I am slgihtly removed instead of submerged in most groups..</p>
+      <p class="lead">The first of these is the Myers-Briggs test and it's reminding me of the fact I'm not  exactly the 'type' of person who's <i>itching</i> to dive into a group nor worry too much about the opinions of others which is something I already knew, though I also know that - as an outsider - my contributions come from a "step-back" or overhead view of the group as a whole and this perspective leaves me very well placed to perceive group dynamics since I am slightly removed instead of submerged in most groups..</p>
 <hr class="my-4">
 <div id="accordion1" role="tablist">
   <div class="card">
@@ -60,16 +60,36 @@
 		  
 <p>Strengths of the ISTP-A are their extremely high level of mental energy, creativity and practicality, spontaeneous adaptation to problems, pragmatic/practical thinking, their ability to prioritize and the fact they're great in high-stress or crisis situations because they're too detached and uncaring to panic about ahh, <i>anything</i>.</p>
 <p>Weaknesses include that we are stubborn, insensitive to other peoples needs, reserved and detached, <i>super</i> </i>easily bored, dislike investing in long-term effort and are compulsive..</p>		 
-<p>Click <a href="https://www.16personalities.com/istp-personality" style="color: #00F3C9">here</a> to view complete results for the <strong>ISTP-A</strong> personality type or click the logo below to visit 16personalities.com to take the test yourself..</p>
+<p>Click <a href="https://www.16personalities.com/istp-personality" style="color: #00F3C9">here</a> to view complete results for <strong>my</strong> personality test or click the logo below to visit 16personalities.com to take the test yourself..</p>
 <a href="https://www.16personalities.com/" target="_blank"><img src="16personalities-logo.png" style="align: center"></a>    </div>
     </div>
   </div>
   <div class="card">
     <div class="card-header" role="tab" id="headingTwo1">
-      <h5 class="mb-0"> <a class="collapsed" data-toggle="collapse" href="#collapseTwo1" role="button" aria-expanded="false" aria-controls="collapseTwo1">Results of Online Learning Style test.</a> </h5>
+      <h5 class="mb-0"> <a class="collapsed" data-toggle="collapse" href="#collapseTwo1" role="button" aria-expanded="false" aria-controls="collapseTwo1">What's your learning style?</a> </h5>
+      <p>This online quiz presents visitors with 20 questions, then displays the results and though the questions where reasonably comprehensive in subjects and topics, I found personally the three multible choice answers very limited and often found there was no option for what I would actually do in the situation the question surmised. Nonetheless I took the quiz and the results where pretty simple.</p>
+      <p><em>Simple</em> test <em>simple</em> results, I guess..</p>
     </div>
     <div id="collapseTwo1" class="collapse" role="tabpanel" aria-labelledby="headingTwo1" data-parent="#accordion1">
-      <div class="card-body">Results of learning style test ...</div>
+      <div class="card-body">
+        <p class="h4">I'm a visual learner, apparently..</p>
+        <p>As I've just mentioned the quiz in question was extremely crippled by the limited options for each question and I don't really have a lot of faith in such a blunt means of testing a persons style of learning, but here is their graph..        </p>
+        <div class="progress" style="background: #666">
+          <div class="progress-bar bg-info" role="progressbar" style="width: 30%; background-color: #B84602" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">30% AUDITORYY</div>
+      </div>
+		    <br />
+        <div class="progress" style="background: #666">
+          <div class="progress-bar bg-info" role="progressbar" style="width: 40%; background-color: #B84602" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">40% VISUAL</div>
+        </div>
+		    <br />
+        <div class="progress" style="background: #666">
+          <div class="progress-bar bg-info" role="progressbar" style="width: 30%; background-color: #B84602" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">30% TACTILE</div>
+        </div>
+		    <br />
+		  <p>Beyond this simple and woefully inaccurate summary of learning style there's a page filled with copy that goes into great detail about the three different methods of learning and I really don't see there's any point in either copy/pasting or regurgitating what that entails here: merely being hosted on an educational site doesn't in any way mean the test is is useful and I'm quite happy to qualify this with the only common-sense logical argument needed to illustrate why this method of determining an individuals most efficient mode of learning is pointless - driven more by the power of suggestion than any kind of evaluation of anything.</p>
+		  <p>*...</p>
+
+      </div>
     </div>
   </div>
   <div class="card">
