--- a/profile.html
+++ b/profile.html
@@ -68,7 +68,7 @@
     <div class="card-header" role="tab" id="headingTwo1">
       <h5 class="mb-0"> <a class="collapsed" data-toggle="collapse" href="#collapseTwo1" role="button" aria-expanded="false" aria-controls="collapseTwo1">What's your learning style?</a> </h5>
       <p>This online quiz presents visitors with 20 questions, then displays the results and though the questions where reasonably comprehensive in subjects and topics, I found personally the three multible choice answers very limited and often found there was no option for what I would actually do in the situation the question surmised. Nonetheless I took the quiz and the results where pretty simple.</p>
-      <p><em>Simple</em> test <em>simple</em> results, I guess..</p>
+      <p><em>Simple</em> test <em>- simple</em> results, I guess..</p>
     </div>
     <div id="collapseTwo1" class="collapse" role="tabpanel" aria-labelledby="headingTwo1" data-parent="#accordion1">
       <div class="card-body">
@@ -86,8 +86,8 @@
           <div class="progress-bar bg-info" role="progressbar" style="width: 30%; background-color: #B84602" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">30% TACTILE</div>
         </div>
 		    <br />
-		  <p>Beyond this simple and woefully inaccurate summary of learning style there's a page filled with copy that goes into great detail about the three different methods of learning and I really don't see there's any point in either copy/pasting or regurgitating what that entails here: merely being hosted on an educational site doesn't in any way mean the test is is useful and I'm quite happy to qualify this with the only common-sense logical argument needed to illustrate why this method of determining an individuals most efficient mode of learning is pointless - driven more by the power of suggestion than any kind of evaluation of anything.</p>
-		  <p>*...</p>
+		  <p>Beyond this woefully inaccurate summary of learning style there's a page filled with text that goes into great detail about three different methods of learning and I really don't see there's any point in either copy/pasting or regurgitating what that entails here: merely being hosted on a site purporting to be educational doesn't in any way mean the test is is worth much and I'm quite happy to qualify this with the only common-sense logical argument needed to illustrate why this method of determining an individuals most efficient mode of learning is pointless - driven more by the power of suggestion than any kind of evaluation.</p>
+		  <p>In a nutshell, people taking this quiz are narrowed into only a small number of options that don't even come close to representing the full range of human behaviour and I ended up simply chosing one of three options I'd never chose in reality - just to get on with the quiz - so many times, that before the quiz was half way through I'd already realized it was forcing me to fit with the texting when the test should've fit itself to me, human beings generally.</p>
 
       </div>
     </div>
