--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
       <h1 class="display-4" style="color: #B84602">Welcome to Assessment 01: "My Profile"</h1>
 <p class="lead"> This first assessment for Introduction to IT has us tasked with the job of creating our own individual presentation in the format of webpage hosted right here on GitHub - a project I've been very confortable with given I've been creating and messing around with sites for over twenty years now.</p>
       <p class="lead">Before we begin, let me take a few moments to introduce myself and write a paragraph or two about my own background as well as personal history and interests.</p>
-      <p class="lead">&nbsp;</p>
+      <p class="lead" align="center"><img src="details.png" alt="" width="720" height="266" align="center"></p>
+      <p class="lead">Before we worry about that though I should add that anytime you need to reference my student details, they can be found within the top menu dropdown on the right under my name and I've added a snippet of javascript so all you need do to copy my student number or email is click on those menu lines - anywhere the little clipboard icon appears can be copied just by clicking regardless of the html links that might be underneath.</p>
+      <p class="lead">This saves me finding the right place for my details and makes them easily accessible.</p>
+      <p class="lead">My relatives have been in Australia for seven generations now and arrived with the second-fleet for slealing a pig or some other silly shit like that, with one side of the family originating in ireland and my fathers side stemming from england though to the best of my knowledge it was only the irish half who figured stealing livestock in the 16th century would be &quot;no big deal' mmhmm.</p>
 <p class="lead">&nbsp; </p>
       <p class="lead">&nbsp;</p>
       <p class="lead">&nbsp;</p>
