--- a/index.html
+++ b/index.html
@@ -27,8 +27,13 @@
       <p class="lead">Before we begin, let me take a few moments to introduce myself and write a paragraph or two about my own background as well as personal history and interests.</p>
       <p class="lead" align="center"><img src="details.png" alt="" width="720" height="266" align="center"></p>
       <p class="lead">Before we worry about that though I should add that anytime you need to reference my student details, they can be found within the top menu dropdown on the right under my name and I've added a snippet of javascript so all you need do to copy my student number or email is click on those menu lines - anywhere the little clipboard icon appears can be copied just by clicking regardless of the html links that might be underneath.</p>
-      <p class="lead">This saves me finding the right place for my details and makes them easily accessible.</p>
-      <p class="lead">My relatives have been in Australia for seven generations now and arrived with the second-fleet for slealing a pig or some other silly shit like that, with one side of the family originating in ireland and my fathers side stemming from england though to the best of my knowledge it was only the irish half who figured stealing livestock in the 16th century would be &quot;no big deal' mmhmm.</p>
+      <p class="lead">This saves me finding the right place for my details and makes them easily accessible to you from every page..</p>
+      <p class="lead">My relatives have been in Australia for seven generations now and arrived with the second-fleet for slealing a pig or some other silly shit like that, with one side of the family originating in ireland with my fathers side stemming from England.</p>
+      <p class="lead">To the best of my knowledge, it was only the irish half who figured stealing livestock in the 16th century would be &quot;no big deal'.</p>
+      <p class="lead">They were wrong about that.</p>
+      <p class="lead">Honestly, I don't think I'll be finishing this assessment and will have to just upload what's done tonight: even giving myself an additional day and sacrificing the 10% deduction, I've still not finished and a <em>part</em> of that is because I've just starting working again so the middle of the day is interupted by work, but a larger factor is that I started too late - figuring I'd give myself the weekend just gone and simply crush through it did not work once I'd realized all the little bits and peices required plus taken breaks to eat, sleep and other generally distracting human activities.</p>
+      <p class="lead">One interesting fact about me, is that I loved in the Blue Mountains National Park for 16 months when I broke up with my girlfriend of five years then decided I wanted to do something different to living like a middle-class toad in a comfortable home, which had been where I'd lived all my life and was tired of that comfort and the oppressive need to maintain it.</p>
+      <p class="lead">&nbsp;</p>
 <p class="lead">&nbsp; </p>
       <p class="lead">&nbsp;</p>
       <p class="lead">&nbsp;</p>
