--- a/profile.html
+++ b/profile.html
@@ -88,6 +88,8 @@
 		    <br />
 		  <p>Beyond this woefully inaccurate summary of learning style there's a page filled with text that goes into great detail about three different methods of learning and I really don't see there's any point in either copy/pasting or regurgitating what that entails here: merely being hosted on a site purporting to be educational doesn't in any way mean the test is is worth much and I'm quite happy to qualify this with the only common-sense logical argument needed to illustrate why this method of determining an individuals most efficient mode of learning is pointless - driven more by the power of suggestion than any kind of evaluation.</p>
 		  <p>In a nutshell, people taking this quiz are narrowed into only a small number of options that don't even come close to representing the full range of human behaviour and I ended up simply chosing one of three options I'd never chose in reality - just to get on with the quiz - so many times, that before the quiz was half way through I'd already realized it was forcing me to fit with the texting when the test should've fit itself to me, human beings generally.</p>
+		  <p>Here's the link to the site for reference sake, even though it's garbage not worth the kilobyte of space it's wasting online..</p>
+		  <p><a href="http://www.educationplanner.org/students/self-assessments/learning-styles-quiz.shtml" target="new" style="color: #00F3C9">http://www.educationplanner.org/students/self-assessments/learning-styles-quiz.shtml</a></p>
 
       </div>
     </div>
