--- a/profile.html
+++ b/profile.html
@@ -96,10 +96,72 @@
   </div>
   <div class="card">
     <div class="card-header" role="tab" id="headingThree1">
-      <h5 class="mb-0"> <a class="collapsed" data-toggle="collapse" href="#collapseThree1" role="button" aria-expanded="false" aria-controls="collapseThree1"> Results of third personality test.</a> </h5>
+      <h5 class="mb-0"> <a class="collapsed" data-toggle="collapse" href="#collapseThree1" role="button" aria-expanded="false" aria-controls="collapseThree1">Personality Disorder
+Test Results</a> </h5>
     </div>
     <div id="collapseThree1" class="collapse" role="tabpanel" aria-labelledby="headingThree1" data-parent="#accordion1">
-      <div class="card-body">Resulting blab goes here ...</div>
+      <div class="card-body">
+        <p>This test was more interesting though again I'd take it with a grain of salt when we have no idea the logic that sits within the code on the backend so we have no way of knowing how these results are determined, though - at the very least - the test is based on the DSM-5 which is the holy bible of psychology, with the questions put forth being more realistic examples of human feelings and behaviour.</p>
+        <table width="97%" cellspacing="0" cellpadding="0" border="0">
+          <tbody>
+            <tr>
+              <td width="50%" valign="middle" align="right">Paranoid Personality Disorder   </td>
+              <td width="49%" valign="middle" align="left"><img src="https://g.psychcentral.com/blueblock.gif" alt=" " width="91" height="15" border="0"> 46</td>
+            </tr>
+            <tr>
+              <td valign="middle" align="right"> Schizoid Personality Disorder   </td>
+              <td width="49%" valign="middle" align="left"><img src="https://g.psychcentral.com/redblock.gif" alt=" " width="133" height="15" border="0"> 68</td>
+            </tr>
+            <tr>
+              <td valign="middle" align="right"> Schizotypal Personality Disorder   </td>
+              <td width="49%" align="left"><img src="https://g.psychcentral.com/blueblock.gif" alt=" " width="98" height="15" border="0"> 39</td>
+            </tr>
+            <tr>
+              <td valign="middle" align="right"> Antisocial Personality Disorder   </td>
+              <td width="49%" align="left"><img src="https://g.psychcentral.com/redblock.gif" alt=" " width="147" height="15" border="0"> 75</td>
+            </tr>
+            <tr>
+              <td valign="middle" align="right"> Borderline Personality Disorder   </td>
+              <td width="49%" align="left"><img src="https://g.psychcentral.com/blueblock.gif" alt=" " width="112" height="15" border="0"> 44</td>
+            </tr>
+            <tr>
+              <td valign="middle" align="right"> Histrionic Personality Disorder   </td>
+              <td width="49%" align="left"><img src="https://g.psychcentral.com/blueblock.gif" alt=" " width="105" height="15" border="0"> 47</td>
+            </tr>
+            <tr>
+              <td valign="middle" align="right"> Narcissistic Personality Disorder   </td>
+              <td width="49%" align="left"><img src="https://g.psychcentral.com/redblock.gif" alt=" " width="231" height="15" border="0"> 92</td>
+            </tr>
+            <tr>
+              <td valign="middle" align="right"> Avoidant Personality Disorder   </td>
+              <td width="49%" align="left"><img src="https://g.psychcentral.com/blueblock.gif" alt=" " width="21" height="15" border="0"> 11</td>
+            </tr>
+            <tr>
+              <td valign="middle" align="right"> Dependent Personality Disorder   </td>
+              <td width="49%" align="left"><img src="https://g.psychcentral.com/blueblock.gif" alt=" " width="14" height="15" border="0"> 6</td>
+            </tr>
+            <tr>
+              <td valign="middle" align="right"> Obsessive-Compulsive Personality Disorder   </td>
+              <td width="49%" align="left"><img src="https://g.psychcentral.com/blueblock.gif" alt=" " width="70" height="15" border="0"> 31</td>
+            </tr>
+          </tbody>
+        </table>
+		<br />
+        <p>Of the three highest figures in the above results, Narcissistic PD rates highest so we'll start with their definition of that since - being considered a disorder - that would be the one most likely to cause issues within a group, followed by discriptions of the other two most dominant traits.</p>
+        <h3>Narcissistic Personality Disorder</h3>
+        <p> Narcissistic personality disorder is characterized by a long-standing   pattern of grandiosity (either in fantasy or actual behavior), an   overwhelming need for admiration, and usually a complete lack of empathy   toward others. People with this disorder often believe they are of   primary importance in everybody&rsquo;s life — and to anyone they meet. While   this pattern of behavior may be appropriate for a king in 16th century   England, it is generally considered inappropriate for most ordinary   people today. </p>
+        <p> People with narcissistic personality disorder often display snobbish,   disdainful, or patronizing attitudes. For example, an individual with   this disorder may complain about a clumsy waiter&rsquo;s &ldquo;rudeness&rdquo; or   &ldquo;stupidity,&rdquo; or conclude a medical evaluation with a condescending   evaluation of the physician. </p>
+        <p> In layperson terms, someone with this disorder may be described simply as a &ldquo;narcissist&rdquo; or as someone with &ldquo;narcissism.&rdquo; </p>
+        <h3>Antisocial Personality Disorder</h3>
+        <p> Antisocial personality disorder is a disorder that is characterized by a   long-standing pattern of disregard for other people&rsquo;s rights, often   crossing the line and violating those rights. A person with antisocial   personality disorder (ASPD) often feels little or no empathy toward   other people, and doesn&rsquo;t see the problem in bending or breaking the law   for their own needs or wants. The disorder usually begins in childhood   or as a teen and continues into a person&rsquo;s adult life. </p>
+        <p> Antisocial personality disorder is often referred to as psychopathy or   sociopathy in popular culture. However, neither psychopathy nor   sociopathy are recognized professional labels used for diagnosis. </p>
+        <h3>Schizoid Personality Disorder</h3>
+        <p> Schizoid personality disorder is characterized by a long-standing   pattern of detachment from social relationships. A person with schizoid   personality disorder often has difficulty expressing emotions and does   so typically in very restricted range, especially when communicating   with others. </p>
+        <p> A person with this disorder may appear to lack a desire for intimacy,   and will avoid close relationships with others. They may often prefer to   spend time with themselves rather than socialize or be in a group of   people. In laypeople terms, a person with schizoid personality disorder   might be thought of as the typical &ldquo;loner.&rdquo; </p>
+        <p> Individuals with schizoid personality disorder may have particular   difficulty expressing anger, even in response to direct provocation,   which contributes to the impression that they lack emotion. </p>
+        <p>Naturally none of these are positive traits but it's worth including to bookend and balance the more positive traits of the Myre-Briggs test and to know what negative aspects there are so they can be avoided or dealt with.</p>
+        <p>Personality disorder test taken and referenced at <a href="https://psychcentral.com" target="new" style="color: #00F3C9">PsychCentral.com</a></p>
+      </div>
     </div>
   </div>
 </div>
