--- a/profile.html
+++ b/profile.html
@@ -97,7 +97,8 @@
   <div class="card">
     <div class="card-header" role="tab" id="headingThree1">
       <h5 class="mb-0"> <a class="collapsed" data-toggle="collapse" href="#collapseThree1" role="button" aria-expanded="false" aria-controls="collapseThree1">Personality Disorder
-Test Results</a> </h5>
+Test Results</a></h5>
+	<p>More comprehensive questioning meant this test seemed like a more valid and believable online assessment and with questions that reflected actual situations plus actual answers, it didn't feel like such a waste of time as the "learning styles" quiz I took before this.</p>	
     </div>
     <div id="collapseThree1" class="collapse" role="tabpanel" aria-labelledby="headingThree1" data-parent="#accordion1">
       <div class="card-body">
