--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
       <p class="lead">They were wrong about that.</p>
       <p class="lead">Honestly, I don't think I'll be finishing this assessment and will have to just upload what's done tonight: even giving myself an additional day and sacrificing the 10% deduction, I've still not finished and a <em>part</em> of that is because I've just starting working again so the middle of the day is interupted by work, but a larger factor is that I started too late - figuring I'd give myself the weekend just gone and simply crush through it did not work once I'd realized all the little bits and peices required plus taken breaks to eat, sleep and other generally distracting human activities.</p>
       <p class="lead">One interesting fact about me, is that I loved in the Blue Mountains National Park for 16 months when I broke up with my girlfriend of five years then decided I wanted to do something different to living like a middle-class toad in a comfortable home, which had been where I'd lived all my life and was tired of that comfort and the oppressive need to maintain it.</p>
+      <p class="lead">On with the show anyway.</p>
+      <p class="lead">Use the top menu to jump around between different sections of the assessment.</p>
       <p class="lead">&nbsp;</p>
 <p class="lead">&nbsp; </p>
       <p class="lead">&nbsp;</p>
