--- a/dreamjob.html
+++ b/dreamjob.html
@@ -23,8 +23,8 @@
     <div class="jumbotron">
       <h1 class="display-4" style="color: #B84602"><img src="pic.png" width="120" height="120" alt="">&nbsp;</h1>
       <h1 class="display-4" style="color: #B84602">Ideal Job</h1>
-<p class="lead"> However you've found your way to myGithub Pages profile you are here now.</p>
-      <p class="lead">Before you begin clicking around the different pages that comprise this assessment though, take a moment to read the short few paragraphs below as they summarize the content you will find as well as tell you a little about myself.&nbsp; &nbsp;&nbsp;</p>
+<p class="lead"> My dream job is programming front and backends for websites from a $5,000 laptop with a huge battery that goes everywhere with me so I can work from a cafe, a national park lookout, public libraries or anywhere else there's a flat surface to put the device on.</p>
+<p class="lead">I probably won't have time to trawl seek.com for an actual position, but I will if there's time after doing the other two pages and before 11:59 tonight.</p>
 <p class="lead">&nbsp; </p>
       <p class="lead">&nbsp;</p>
       <p class="lead">&nbsp;</p>
