--- a/dreamjob.html
+++ b/dreamjob.html
@@ -23,7 +23,7 @@
     <div class="jumbotron">
       <h1 class="display-4" style="color: #B84602"><img src="pic.png" width="120" height="120" alt="">&nbsp;</h1>
       <h1 class="display-4" style="color: #B84602">Ideal Job</h1>
-<p class="lead"> My dream job is programming front and backends for websites from a $5,000 laptop with a huge battery that goes everywhere with me so I can work from a cafe, a national park lookout, public libraries or anywhere else there's a flat surface to put the device on.</p>
+<p class="lead"> My dream job is programming front and backends for websites from a $7,000 laptop with a huge battery that goes everywhere with me so I can work from a cafe, a national park lookout, public libraries or anywhere else there's a flat surface to put the device on.</p>
 <p class="lead">I probably won't have time to trawl seek.com for an actual position, but I will if there's time after doing the other two pages and before 11:59 tonight.</p>
 <p class="lead">&nbsp; </p>
       <p class="lead">&nbsp;</p>
@@ -33,7 +33,7 @@
     </div>
   </div>
  <!-- footer div -->	  
- <div class="badge-dark" align="center" style="background-color: #5A5244; color: #9B9384; font-weight: 400">﴾ <img src="copy.png" alt="" width="10" height="13" align="absmiddle"/> <a id="ftMail" href="mailto:jason@psychaesthetic.com.au" accesskey="M" style="color: #C2C2C2" onclick="copyToClipboard('jason@psychaesthetic.com.au')">Toss me an email</a> or <a id="ftSite" href="https://psychaesthetic.com.au" accesskey="P" target="new"  style="color: #C2C2C2" onclick="copyToClipboard('https://psychaesthetic.com.au')">visit my personal site</a> <img src="copy.png" alt="" width="10" height="13" align="absmiddle"/> ﴿<br />
+ <div class="badge-dark" align="center" style="background-color: #5A5244; color: #9B9384; font-weight: 400">﴾ <img src="copy.png" alt="" width="10" height="13" align="absmiddle"/> <a id="ftMail" href="mailto:jason@psychaesthetic.com.au" accesskey="M" style="color: #C2C2C2" onclick="copyToClipboard('jason@psychaesthetic.com.au')">Toss me an email</a> or <a id="ftSite" href="https://psychaesthetic.com.au" accesskey="P" target="new"  style="color: #C2C2C2" onclick="copyToClipboard('https://psychaesthetic.com.au/words/diaries/2020/')">visit my personal site</a> <img src="copy.png" alt="" width="10" height="13" align="absmiddle"/> ﴿<br />
  </div>
   <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light"> <a class="navbar-brand" href="index.html">Welcome!</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1" aria-controls="navbarSupportedContent1" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
